--- a/index.html
+++ b/index.html
@@ -4,86 +4,53 @@
     <title>Basic template</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <style>
-
-{
-	background-image: -moz-linear-gradient(center bottom,#202020 0,#4a4a4a 100%);
-	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0,#202020),color-stop(1,#4a4a4a));
-	box-shadow: 0 1px 0 #aaa;
-	height: 44px;
-	moz-box-shadow: 0 1px 0 #aaa;
-	o-box-shadow: 0 1px 0 #aaa;
-	padding: 0 20px;
-	webkit-box-shadow: 0 1px 0 #aaa;
-}
-        .content-div1 {
-            min-width: 720px;
-            min-height: 480px;
-            border: 3px solid #000;
+    	body {
+			background: #989898;
+		}
+        .viewport {
+        	position:absolute;
+            width: 90%;
+            height: 80%;
+            border: 1px solid #000;
+        }
+        .resources {
+            width: 200px;
+            height: 480px;
+            background-color: #737373;
+            position: absolute;
+            z-index: 2;
+            right:10px;
+            border: 1px solid #000;
             margin: 5px;
         }
-        .content-div2 {
-            min-width: 200px;
-            min-height: 480px;
-            border: 3px solid #000;
-            margin: 5px;
-        }
-        .container-div1 {
-            float: left;
-            text-align: center;
-            font-family: helvetica;
-            font-style: bold;
-        }
-          .container-div2 {
-            float: left;
-            text-align: center;
-            font-family: helvetica;
-            font-style: bold;
-        }
-        #main {
-            min-width: 300px;
-            min-height: 200px;
-        }
-        #properties-panel
-{
-	background: url(interface/timeline-bg.jpg) repeat;
-	bottom: 0;
-	height: 50px;
-	overflow: hidden;
-	position: absolute;
-	width: 100%;
-}
+        .playhead {
+        	height: 50px;
+        	width:100%;
+        	background-color: #454545;
+        	position: absolute;
+        	bottom: 0px;
+        	{
     </style>
-    <script src="lib/popcorn/popcorn.js"></script>
-    <script src="lib/popcorn/popcorn.youtube.js"></script>
-    <script src="lib/popcorn/popcorn.vimeo.js"></script>
-    <script src="lib/popcorn/popcorn.soundcloud.js"></script>
-    <script src="lib/popcorn/popcorn.image.js"></script>
-    <script src="lib/popcorn/popcorn.footnote.js"></script>
-    <script src="lib/popcorn/popcorn.twitter.js"></script>
-    <script src="lib/popcorn/popcorn.subtitle.js"></script>
-    <script src="lib/popcorn/popcorn.attribution.js"></script>
-    <script src="lib/popcorn/popcorn.flickr.js"></script>
-    <script src="lib/popcorn/popcorn.webpage.js"></script>
-    <script src="lib/popcorn/popcorn.wikipedia.js"></script>
-    <script src="lib/popcorn/popcorn.googlemap.js"></script>
-    <script src="butter/src/previewer/butter.previewer.js"></script>
+   <script src="../../lib/popcorn/popcorn.js"></script>
+    <script src="../../lib/popcorn/popcorn.youtube.js"></script>
+    <script src="../../lib/popcorn/popcorn.vimeo.js"></script>
+    <script src="../../lib/popcorn/popcorn.soundcloud.js"></script>
+    <script src="../../lib/popcorn/popcorn.image.js"></script>
+    <script src="../../lib/popcorn/popcorn.footnote.js"></script>
+    <script src="../../lib/popcorn/popcorn.twitter.js"></script>
+    <script src="../../lib/popcorn/popcorn.subtitle.js"></script>
+    <script src="../../lib/popcorn/popcorn.attribution.js"></script>
+    <script src="../../lib/popcorn/popcorn.flickr.js"></script>
+    <script src="../../lib/popcorn/popcorn.webpage.js"></script>
+    <script src="../../lib/popcorn/popcorn.wikipedia.js"></script>
+    <script src="../../lib/popcorn/popcorn.googlemap.js"></script>
+    <script src="../../lib/popcorn/popcorn.timeline.js"></script>
+    <script src="../../butter/src/previewer/butter.previewer.js"></script>
 </head>
 <body>
-<header>
-</header>
-    <div class="container-div1">
-        <div class="content-div1" data-butter="target" id="Area1"></div>
-        <p>Area 1</p>
-    </div>
-    <div class="container-div2">
-        <div class="content-div2" data-butter="target" id="Area2"></div>
-        <p>Area 2</p>
-    </div>
-    <section id="properties-panel">
-
-    <div id="main" data-butter="media">
-    <audio src="voiceover.ogg" controls>
-    </div>
-	</section>
+<div class="viewport" data-butter="target" id="Area1"></div>
+<div class="resources" data-butter="target" id="Area2"></div>
+<div class="playhead"><div id="main" data-butter="media"></div>
+</div>
 </body>
 </html>
